--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,37 +1,34 @@
 {
-  "env": { "browser": true, "es2021": true },
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react-native/all",
-    "prettier"
-  ],
-  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier",
-    "import",
-    "react-hooks",
-    "react-native"
-  ],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error",
-    "padding-line-between-statements": [
-      "error",
-      { "blankLine": "always", "prev": "*", "next": "return" }
-    ],
-    "import/newline-after-import": 1,
-    "import/order": [
-      "warn",
-      {
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": true
-        },
-        "newlines-between": "always-and-inside-groups"
-      }
-    ],
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
-  }
+    "env": { "browser": true, "es2021": true },
+    "extends": ["plugin:@typescript-eslint/recommended", "plugin:react-native/all", "prettier"],
+    "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
+    "plugins": ["@typescript-eslint", "prettier", "import", "react-hooks", "react-native"],
+    "rules": {
+        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-explicit-any": "error",
+        "padding-line-between-statements": [
+            "error",
+            { "blankLine": "always", "prev": "*", "next": "return" }
+        ],
+        "import/newline-after-import": 1,
+        "import/order": [
+            "warn",
+            {
+                "alphabetize": {
+                    "order": "asc",
+                    "caseInsensitive": true
+                },
+                "newlines-between": "always-and-inside-groups"
+            }
+        ],
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "react-native/no-raw-text": [
+            "error",
+            {
+                "skip": ["ThemedText"]
+            }
+        ],
+        "react-native/no-inline-styles": "warn"
+    }
 }
