--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "expp-lint": "expo lint",
-    "lint": "eslint app --ext .ts,.tsx --fix"
+    "lint": "eslint app --ext .ts,.tsx --fix",
+    "prepare": "husky"
   },
   "jest": {
     "preset": "jest-expo"
@@ -49,6 +50,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-native": "^4.1.0",
+    "husky": "^9.0.11",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
     "prettier": "^3.3.1",
