--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,11 @@
 {
     "env": { "browser": true, "es2021": true },
-    "extends": ["plugin:@typescript-eslint/recommended", "plugin:react-native/all", "prettier"],
+    "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react-native/all",
+        "prettier",
+        "plugin:@tanstack/eslint-plugin-query/recommended"
+    ],
     "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
     "plugins": ["@typescript-eslint", "prettier", "import", "react-hooks", "react-native"],
     "rules": {
