--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@expo/vector-icons": "^14.0.0",
         "@react-navigation/native": "^6.0.2",
+        "@tanstack/react-query": "^5.40.1",
         "expo": "^51.0.10",
         "expo-constants": "~16.0.1",
         "expo-font": "~12.0.5",
@@ -41,6 +42,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.24.6",
+        "@tanstack/eslint-plugin-query": "^5.35.6",
         "@types/jest": "^29.5.12",
         "@types/react": "~18.2.45",
         "@types/react-test-renderer": "^18.0.7",
