--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
         "@expo/vector-icons": "^14.0.0",
         "@react-navigation/native": "^6.0.2",
         "@tanstack/react-query": "^5.40.1",
-        "expo": "^51.0.10",
+        "expo": "^51.0.17",
         "expo-constants": "~16.0.1",
-        "expo-font": "~12.0.5",
+        "expo-font": "^12.0.7",
         "expo-linking": "~6.3.1",
-        "expo-router": "~3.5.14",
-        "expo-splash-screen": "^0.27.4",
+        "expo-router": "^3.5.17",
+        "expo-splash-screen": "^0.27.5",
         "expo-status-bar": "~1.12.1",
-        "expo-system-ui": "~3.0.4",
+        "expo-system-ui": "^3.0.6",
         "expo-web-browser": "~13.0.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-native": "0.74.1",
+        "react-native": "^0.74.2",
         "react-native-gesture-handler": "~2.16.1",
         "react-native-reanimated": "~3.10.1",
         "react-native-safe-area-context": "4.10.1",
@@ -56,7 +56,7 @@
         "eslint-plugin-react-native": "^4.1.0",
         "husky": "^9.0.11",
         "jest": "^29.2.1",
-        "jest-expo": "~51.0.1",
+        "jest-expo": "^51.0.3",
         "lint-staged": "^15.2.5",
         "prettier": "^3.3.1",
         "react-test-renderer": "18.2.0",
