--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@expo/vector-icons": "^14.0.0",
+        "@react-navigation/bottom-tabs": "^6.6.0",
         "@react-navigation/native": "^6.0.2",
         "@tanstack/react-query": "^5.40.1",
         "expo": "^51.0.17",
