--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@react-navigation/bottom-tabs": "^6.6.0",
         "@react-navigation/native": "^6.0.2",
         "@tanstack/react-query": "^5.40.1",
+        "@types/socket.io-client": "^3.0.0",
         "expo": "^51.0.17",
         "expo-constants": "~16.0.1",
         "expo-font": "^12.0.7",
@@ -40,7 +41,8 @@
         "react-native-safe-area-context": "4.10.1",
         "react-native-screens": "3.31.1",
         "react-native-svg": "^15.3.0",
-        "react-native-web": "^0.19.12"
+        "react-native-web": "^0.19.12",
+        "socket.io-client": "^4.7.5"
     },
     "devDependencies": {
         "@babel/core": "^7.24.6",
