--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "^0.74.2",
+        "react-native-chart-kit": "^6.12.0",
         "react-native-gesture-handler": "~2.16.1",
         "react-native-reanimated": "~3.10.1",
         "react-native-safe-area-context": "4.10.1",
         "react-native-screens": "3.31.1",
         "react-native-svg": "^15.3.0",
-        "react-native-web": "^0.19.12",
-        "socket.io-client": "^4.7.5"
+        "react-native-web": "^0.19.12"
     },
     "devDependencies": {
         "@babel/core": "^7.24.6",
