--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "preset": "jest-expo"
     },
     "dependencies": {
+        "@expo/ngrok": "^4.1.3",
         "@expo/vector-icons": "^14.0.0",
         "@react-navigation/bottom-tabs": "^6.6.0",
         "@react-navigation/native": "^6.0.2",
