--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "react-native-safe-area-context": "4.10.1",
         "react-native-screens": "3.31.1",
         "react-native-svg": "^15.3.0",
-        "react-native-web": "^0.19.12"
+        "react-native-web": "^0.19.12",
+        "react-native-webview": "13.8.6"
     },
     "devDependencies": {
         "@babel/core": "^7.24.6",
