--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
         "@react-navigation/native": "^6.0.2",
         "@tanstack/react-query": "^5.40.1",
         "@types/socket.io-client": "^3.0.0",
-        "expo": "^51.0.17",
+        "expo": "~51.0.21",
         "expo-constants": "~16.0.1",
-        "expo-font": "^12.0.7",
+        "expo-font": "~12.0.9",
         "expo-linking": "~6.3.1",
-        "expo-router": "^3.5.17",
+        "expo-router": "~3.5.18",
         "expo-splash-screen": "^0.27.5",
         "expo-status-bar": "~1.12.1",
-        "expo-system-ui": "^3.0.6",
+        "expo-system-ui": "~3.0.7",
         "expo-web-browser": "~13.0.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-native": "^0.74.2",
+        "react-native": "^0.74.3",
         "react-native-chart-kit": "^6.12.0",
         "react-native-gesture-handler": "~2.16.1",
         "react-native-reanimated": "~3.10.1",
-        "react-native-safe-area-context": "4.10.1",
+        "react-native-safe-area-context": "^4.10.5",
         "react-native-screens": "3.31.1",
-        "react-native-svg": "^15.3.0",
+        "react-native-svg": "^15.2.0",
         "react-native-web": "^0.19.12"
     },
     "devDependencies": {
