feat: add msw and mock races by date

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,5 +35,12 @@
             }
         ],
         "react-native/no-inline-styles": "warn"
+        // "overrides": [
+        //     {
+        //         // Test files only
+        //         "files": ["**/__tests__/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
+        //         "extends": ["plugin:testing-library/react"]
+        //     }
+        // ]
     }
 }
