--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "expo-status-bar": "~1.12.1",
         "expo-system-ui": "^3.0.6",
         "expo-web-browser": "~13.0.3",
+        "fast-text-encoding": "^1.0.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "^0.74.2",
@@ -43,11 +44,13 @@
         "react-native-safe-area-context": "4.10.1",
         "react-native-screens": "3.31.1",
         "react-native-svg": "^15.3.0",
+        "react-native-url-polyfill": "^2.0.0",
         "react-native-web": "^0.19.12"
     },
     "devDependencies": {
         "@babel/core": "^7.24.6",
         "@tanstack/eslint-plugin-query": "^5.35.6",
+        "@testing-library/react-native": "^12.5.1",
         "@types/jest": "^29.5.12",
         "@types/react": "~18.2.45",
         "@types/react-test-renderer": "^18.0.7",
@@ -59,10 +62,12 @@
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-native": "^4.1.0",
+        "eslint-plugin-testing-library": "^6.2.2",
         "husky": "^9.0.11",
         "jest": "^29.2.1",
         "jest-expo": "^51.0.3",
         "lint-staged": "^15.2.5",
+        "msw": "^2.3.2",
         "prettier": "^3.3.1",
         "react-test-renderer": "18.2.0",
         "typescript": "~5.3.3"
